feat: Implement `true` utility and GTest integration
Implements the `true` utility in C++20. Adds Google Test framework integration. Includes basic tests for the infrastructure.

--- a/cpp-src/src/CMakeLists.txt
+++ b/cpp-src/src/CMakeLists.txt
@@ -1,5 +1,4 @@
 # src/CMakeLists.txt
 
-# Example:
-# add_executable(true_cpp true.cpp)
-# install(TARGETS true_cpp DESTINATION bin)
+add_executable(true_cpp true.cpp)
+install(TARGETS true_cpp DESTINATION bin)
