--- a/cpp-src/tests/CMakeLists.txt
+++ b/cpp-src/tests/CMakeLists.txt
@@ -1,2 +1,6 @@
-# tests/CMakeLists.txt
-# add_test(...)
+include(GoogleTest)
+
+add_executable(true_test true_test.cpp)
+target_link_libraries(true_test GTest::gtest_main)
+
+gtest_discover_tests(true_test)
