--- a/cpp-src/CMakeLists.txt
+++ b/cpp-src/CMakeLists.txt
@@ -19,6 +19,15 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 # Make the 'include' directory globally available to all targets in this project
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
 # --- Subdirectories ---
 add_subdirectory(src)
 add_subdirectory(external)
